[package]
name = "dsmc"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.8.3"
thiserror = "2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winnt", 
    "winuser", 
    "winbase"
] }

[workspace]
members = [
    "dsmcflash"
]
